fix: fixed contacts not stacking on mobile sizes (#1089)

--- a/assets/sass/kerrokantasi/_hearing-page.scss
+++ b/assets/sass/kerrokantasi/_hearing-page.scss
@@ -374,7 +374,7 @@
   flex-wrap: wrap;
   .hearing-contact {
     flex: 1;
-    max-width: 33.3%;
+    max-width: 100%;
     min-width: 25%;
     margin-bottom: $line-height-computed;
   }
